# gorsee-code

./: .gitignore  AUTHORS.md  Cargo.toml  LICENSE  NOTICE  README.md  flake.nix  package.json
.github/workflows/: ci.yml  release.yml
crates/gorsee-code-acp/: Cargo.toml
crates/gorsee-code-acp/src/: lib.rs  notifications.rs  stdio.rs  stdio_support.rs
crates/gorsee-code-acp/tests/: stdio_protocol.rs  stdio_state.rs
crates/gorsee-code-agent/: Cargo.toml
crates/gorsee-code-agent/src/: agent_loop.rs  agent_tool_policy.rs  agent_tools.rs  artifact_events.rs  artifact_signals.rs  budget_events.rs  client.rs  error.rs  events.rs  execution.rs  final_answer_content.rs  final_policy.rs  final_policy_tests.rs  lib.rs  prompts.rs  protocol.rs  report.rs  resume.rs  resume_pending.rs  resume_types.rs  runner.rs  runner_execute.rs  runner_finish.rs  session_artifacts.rs  summary.rs  tool_events.rs  turn_contract.rs  turn_response.rs
crates/gorsee-code-agent/tests/: approval_flow.rs  coding_turn_contract.rs  lcp_turn.rs  mission_runner.rs  task_runner.rs  task_runner_lifecycle.rs  tool_contract.rs  usage_cache.rs
crates/gorsee-code-agent/tests/support/: mod.rs
crates/gorsee-code-artifacts/: Cargo.toml
crates/gorsee-code-artifacts/src/: lib.rs
crates/gorsee-code-cli/: Cargo.toml
crates/gorsee-code-cli/src/: acp_commands.rs  approval_commands.rs  args.rs  auth.rs  budget_commands.rs  checkpoint_commands.rs  commands.rs  commands_extra.rs  config_file.rs  diff_output.rs  interactive.rs  interactive_agents.rs  lib.rs  limit_commands.rs  live.rs  main.rs  model_commands.rs  mouse_debug.rs  paths.rs  project_commands.rs  protection_commands.rs  route_commands.rs  secret_prompt.rs  session_commands.rs  task_output.rs  tui_commands.rs  uninstall_commands.rs
crates/gorsee-code-cli/tests/: cli_behavior.rs  cli_surface.rs  gcode_startup.rs  production_flows.rs  route_contract.rs  support.rs
crates/gorsee-code-coding-core/: Cargo.toml
crates/gorsee-code-coding-core/src/: execution_contract.rs  execution_steps.rs  intent.rs  intent_tests.rs  lcp.rs  lcp_response.rs  lib.rs  orchestrator.rs  planning.rs  planning_tests.rs  transcript.rs  transcript_tests.rs  turn.rs
crates/gorsee-code-config/: Cargo.toml
crates/gorsee-code-config/src/: config.rs  defaults.rs  lib.rs
crates/gorsee-code-context/: Cargo.toml
crates/gorsee-code-context/src/: lib.rs  repo_map.rs
crates/gorsee-code-core/: Cargo.toml
crates/gorsee-code-core/src/: agent.rs  capability.rs  command.rs  event.rs  lib.rs  mission.rs  task.rs
crates/gorsee-code-diff/: Cargo.toml
crates/gorsee-code-diff/src/: engine.rs  lib.rs  model.rs  tests.rs
crates/gorsee-code-gateway/: Cargo.toml
crates/gorsee-code-gateway-client/: Cargo.toml
crates/gorsee-code-gateway-client/src/: lib.rs
crates/gorsee-code-gateway/src/: approval_actions.rs  artifacts.rs  lib.rs  routes.rs  sessions.rs  state.rs
crates/gorsee-code-gateway/tests/: approval_actions.rs  session_events.rs
crates/gorsee-code-hooks/: Cargo.toml
crates/gorsee-code-hooks/src/: lib.rs
crates/gorsee-code-limits/: Cargo.toml
crates/gorsee-code-limits/src/: lib.rs  monitor.rs  parser.rs
crates/gorsee-code-mcp/: Cargo.toml
crates/gorsee-code-mcp/src/: call.rs  config.rs  inventory.rs  lib.rs  runtime.rs  tests.rs
crates/gorsee-code-mcp/tests/: runtime_smoke.rs
crates/gorsee-code-mcp/tests/fixtures/: mcp_fixture.rs
crates/gorsee-code-neurogate/: Cargo.toml
crates/gorsee-code-neurogate/src/: chat.rs  client.rs  error.rs  lib.rs  models.rs
crates/gorsee-code-safety/: Cargo.toml
crates/gorsee-code-safety/src/: lib.rs  output.rs  paths.rs  permissions.rs  redaction.rs
crates/gorsee-code-session/: Cargo.toml
crates/gorsee-code-session/src/: approval.rs  export.rs  lib.rs  manifest.rs  store.rs
crates/gorsee-code-session/tests/: approval_store.rs
crates/gorsee-code-skills/: Cargo.toml
crates/gorsee-code-skills/src/: lib.rs
crates/gorsee-code-tool-runtime/: Cargo.toml
crates/gorsee-code-tool-runtime/src/: lib.rs  manifest.rs  registry.rs
crates/gorsee-code-tools/: Cargo.toml
crates/gorsee-code-tools/src/: command.rs  files.rs  final_answer.rs  git.rs  lib.rs  mcp.rs  patch.rs  repo.rs  test_runner.rs
crates/gorsee-code-tools/src/patch/: patch_unified.rs
crates/gorsee-code-tui/: Cargo.toml
crates/gorsee-code-tui/src/: actions.rs  app.rs  app_actions.rs  app_input.rs  app_mouse.rs  app_panels.rs  app_project.rs  attachment.rs  center_copy.rs  center_panel.rs  clipboard.rs  command_specs.rs  commands.rs  completion.rs  editor.rs  input.rs  layout.rs  lib.rs  main.rs  model_picker.rs  navigation.rs  panel_items.rs  project.rs  render.rs  runtime.rs  runtime_draw.rs  runtime_jobs.rs  runtime_tests.rs  screen.rs  screen_footer.rs  screen_metrics.rs  screen_panels.rs  screen_parts.rs  screen_selection.rs  scripted_terminal.rs  session_picker.rs  terminal.rs  text_cursor.rs  theme.rs
crates/gorsee-code-tui/tests/: chat_contract.rs  render.rs
crates/gorsee-code-tui/tests/render/: command_intents.rs  command_output.rs  common.rs  completions.rs  editor.rs  mouse.rs  mouse_editor.rs  project.rs  settings.rs  shell.rs
crates/gorsee-code-ui-state/: Cargo.toml
crates/gorsee-code-ui-state/src/: fixture.rs  lib.rs  presets.rs  view.rs  workspace.rs  workspace_agents.rs  workspace_tests.rs
crates/gorsee-code-ui-state/tests/: approvals.rs
crates/gorsee-code-usage/: Cargo.toml
crates/gorsee-code-usage/src/: budget.rs  ledger.rs  lib.rs
docs/: ARCHITECTURE.md  PRIVACY.md  SECURITY.md  UNINSTALL.md  coding-core-orchestrator-plan.md
npm/: gcode.js  postinstall.js
schemas/: artifact.schema.json  command.schema.json  events.schema.json  hook.schema.json  session-manifest.schema.json  skill.schema.json  tool-manifest.schema.json
