[workspace]
members = [
  "crates/gorsee-code-agent",
  "crates/gorsee-code-artifacts",
  "crates/gorsee-code-cli",
  "crates/gorsee-code-config",
  "crates/gorsee-code-context",
  "crates/gorsee-code-core",
  "crates/gorsee-code-gateway",
  "crates/gorsee-code-gateway-client",
  "crates/gorsee-code-hooks",
  "crates/gorsee-code-limits",
  "crates/gorsee-code-neurogate",
  "crates/gorsee-code-safety",
  "crates/gorsee-code-session",
  "crates/gorsee-code-skills",
  "crates/gorsee-code-tool-runtime",
  "crates/gorsee-code-tools",
  "crates/gorsee-code-tui",
  "crates/gorsee-code-ui-state",
  "crates/gorsee-code-usage",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Gorsee Code Contributors"]
repository = "https://github.com/OlegGorsky/gorsee-code"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
futures-util = "0.3"
ignore = "0.4"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
