[package]
name = "gorsee-code-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gorsee-code-core = { path = "../gorsee-code-core" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
