[package]
name = "gorsee-code-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ignore.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
