[package]
name = "gorsee-code-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
git2.workspace = true
serde.workspace = true
similar.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
