[package]
name = "gorsee-code-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
gorsee-code-artifacts = { path = "../gorsee-code-artifacts" }
gorsee-code-core = { path = "../gorsee-code-core" }
gorsee-code-hooks = { path = "../gorsee-code-hooks" }
gorsee-code-limits = { path = "../gorsee-code-limits" }
gorsee-code-skills = { path = "../gorsee-code-skills" }
gorsee-code-tool-runtime = { path = "../gorsee-code-tool-runtime" }
gorsee-code-tools = { path = "../gorsee-code-tools" }
gorsee-code-ui-state = { path = "../gorsee-code-ui-state" }
gorsee-code-usage = { path = "../gorsee-code-usage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
