[package]
name = "gorsee-code-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gorsee-code-limits = { path = "../gorsee-code-limits" }
gorsee-code-safety = { path = "../gorsee-code-safety" }
gorsee-code-usage = { path = "../gorsee-code-usage" }
serde.workspace = true
