[package]
name = "gorsee-code-neurogate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures-util.workspace = true
gorsee-code-core = { path = "../gorsee-code-core" }
gorsee-code-limits = { path = "../gorsee-code-limits" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
