[package]
name = "gorsee-code-tool-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gorsee-code-safety = { path = "../gorsee-code-safety" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
