[package]
name = "gorsee-code-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
gorsee-code-ui-state = { path = "../gorsee-code-ui-state" }
serde_json.workspace = true
