[package]
name = "gorsee-code-ui-state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gorsee-code-config = { path = "../gorsee-code-config" }
gorsee-code-core = { path = "../gorsee-code-core" }
gorsee-code-session = { path = "../gorsee-code-session" }
gorsee-code-usage = { path = "../gorsee-code-usage" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
